--- a/package.json
+++ b/package.json
@@ -1,9 +1,13 @@
 {
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
+    "dotenv": "^16.4.7",
     "express": "^4.18.1",
+    "jsonwebtoken": "^9.0.2",
     "mongoose": "^6.3.3",
     "mongoose-unique-validator": "^3.0.0",
-    "validator": "^13.7.0"
+    "validator": "^13.7.0",
+    "yup": "^1.6.1"
   }
 }
